force-app/main/default/objects/BOM_Part__c/BOM_Part__c.object-meta.xml
<CustomObject>
    <label>BOM Part</label>
    <nameField>
        <displayFormat>PART-{00000}</displayFormat>
        <label>BOM Part No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>