force-app/main/default/objects/BOM_Part__c/fields/BOM_SubComponent__c.field-meta.xml
<CustomField>
    <fullName>BOM_SubComponent__c</fullName>
    <label>BOM Sub Component</label>
    <referenceTo>BOM_SubComponent__c</referenceTo>
    <relationshipLabel>BOM Parts</relationshipLabel>
    <relationshipName>BOM_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>