force-app/main/default/objects/BOM_Part__c/fields/Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number__c</fullName>
    <label>図面番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>