force-app/main/default/objects/BOM_Part__c/fields/Drawing_Revision__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Revision__c</fullName>
    <label>図面改訂</label>
    <length>10</length>
    <type>Text</type>
</CustomField>