force-app/main/default/objects/BOM_Part__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <formula>Quantity__c * Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>小計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>