force-app/main/default/objects/BOM_Part__c/fields/Make_or_Buy__c.field-meta.xml
<CustomField>
    <fullName>Make_or_Buy__c</fullName>
    <label>内製/購買区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>内製</fullName><default>false</default><label>内製</label></value>
            <value><fullName>購買</fullName><default>true</default><label>購買</label></value>
            <value><fullName>外注</fullName><default>false</default><label>外注</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>