force-app/main/default/objects/BOM_Part__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>メーカー名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>