force-app/main/default/objects/BOM_Part__c/fields/Manufacturer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Part_Number__c</fullName>
    <label>メーカー品番</label>
    <length>40</length>
    <type>Text</type>
</CustomField>