force-app/main/default/objects/BOM_Part__c/fields/Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site__c</fullName>
    <label>製造拠点</label>
    <type>Lookup</type>
    <referenceTo>Manufacturing_Site__c</referenceTo>
    <relationshipLabel>BOM部品</relationshipLabel>
    <relationshipName>BOM_Parts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>