force-app/main/default/objects/BOM_Part__c/fields/Matching_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Matching_Confidence__c</fullName>
    <label>名寄せ信頼度</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>