force-app/main/default/objects/BOM_Part__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>素材種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>鉄鋼</fullName><default>false</default><label>鉄鋼</label></value>
            <value><fullName>アルミ</fullName><default>false</default><label>アルミ</label></value>
            <value><fullName>ステンレス</fullName><default>false</default><label>ステンレス</label></value>
            <value><fullName>銅</fullName><default>false</default><label>銅</label></value>
            <value><fullName>樹脂（ABS）</fullName><default>false</default><label>樹脂（ABS）</label></value>
            <value><fullName>樹脂（POM）</fullName><default>false</default><label>樹脂（POM）</label></value>
            <value><fullName>ゴム</fullName><default>false</default><label>ゴム</label></value>
            <value><fullName>その他</fullName><default>false</default><label>その他</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>