force-app/main/default/objects/BOM_Part__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <label>品名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>