force-app/main/default/objects/BOM_Part__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>品番</label>
    <length>40</length>
    <type>Text</type>
</CustomField>