force-app/main/default/objects/BOM_Part__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>数量</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>