force-app/main/default/objects/BOM_Part__c/fields/Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>Safety_Stock__c</fullName>
    <label>安全在庫数</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>