force-app/main/default/objects/BOM_Part__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>サプライヤー</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BOM Parts (サプライヤー)</relationshipLabel>
    <relationshipName>BOM_Parts_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>