force-app/main/default/objects/BOM_Part__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <label>公差</label>
    <length>30</length>
    <type>Text</type>
</CustomField>